# agentrunner

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/agentrunner/: __init__.py  agent_runner.py  agents_sdk_setup.py  json_sanitizer.py  model_provider.py  output_validation.py  request_context.py  runtime.py  tracing_context.py
src/agentrunner/providers/: __init__.py  openrouter.py
tests/: test_agentrunner_carveout.py  test_agentrunner_runtime.py  test_agentrunner_self_correction.py  test_agentrunner_timeout.py  test_json_sanitizer.py  test_openrouter_provider.py  test_output_validation.py  test_streaming_fallback_logging.py  test_think_tag_filter_streaming.py
tests/support/: __init__.py  fake_model_provider.py
