[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrunner"
version = "0.1.0"
description = "Host-agnostic LLM agent execution on top of the OpenAI Agents SDK: model fallback, streaming, structured-output extraction, self-correction, and tracing — behind a small injected provider seam."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Boundless Studios" }]
keywords = ["llm", "agents", "openai-agents", "fallback", "structured-output", "tracing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "openai-agents>=0.9",
    "openai>=2",
    "pydantic>=2.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/Boundless-Studios/agentrunner"
Repository = "https://github.com/Boundless-Studios/agentrunner"
Issues = "https://github.com/Boundless-Studios/agentrunner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentrunner"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
asyncio_mode = "auto"
testpaths = ["tests"]
